--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@ playGame = function(userPlay, computerPlay) {
     if (userPlay==='rock' && choice==='scissors') {
         return 'You win!';
     }
-    else if (userPlay==='paper' && choice==='rock') {
+    if (userPlay==='paper' && choice==='rock') {
         return 'You win!';
     }
-    else if (userPlay==='scissors' && choice==='paper') {
+    if (userPlay==='scissors' && choice==='paper') {
         return 'You win!';
     }
-    else if (userPlay==='rock' && choice==='rock') {
+    if (userPlay==='rock' && choice==='rock') {
         return 'You tied!';
     }
-    else if (userPlay==='paper' && choice==='paper') {
+    if (userPlay==='paper' && choice==='paper') {
         return 'You tied!';
     }
-    else if (userPlay==='scissors' && choice==='scissors') {
+    if (userPlay==='scissors' && choice==='scissors') {
         return 'You tied!';
     }
-    else if (userPlay==='rock' && choice==='paper') {
+    if (userPlay==='rock' && choice==='paper') {
         return 'You lose!';
     }
-    else if (userPlay==='paper' && choice==='scissors') {
+    if (userPlay==='paper' && choice==='scissors') {
         return 'You lose!';
     }
-    else if (userPlay==='scissors' && choice==='rock') {
+    if (userPlay==='scissors' && choice==='rock') {
         return 'You lose!';
     }
 }   
